--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,10 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+// Import official Swift.org stylesheet
+@import url("https://swift.org/assets/stylesheets/application.css");
+
+/*===--- Begin Standard Jekyll CSS ----------------------------------------===*/
 @charset "utf-8";
 
 
@@ -51,3 +55,7 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+/*===--- End Standard Jekyll CSS ------------------------------------------===*/
+
+
+
