Prepare for launch
* Move api guidelines into a sub-folder

* Automatically generate a navigation menu

* Create an "unofficial page" warning banner for any page not displayed
  in its final location

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,15 @@
 <nav role="navigation">
   <header role="banner">
     <h1 id="logo">
-      <a href="/" title="Swift.org" role="img" aria-label="Swift.org">
+      <a href="http://swift.org" title="Swift.org" role="img" aria-label="Swift.org">
         Swift.org
       </a>
     </h1>
   </header>
 
+
+  {% include navigation.html context='/' %}
+
   <div id="menu-toggle" class="menu-toggle open"></div>
 </nav>
+
