--- a/css/main.scss
+++ b/css/main.scss
@@ -2,3 +2,14 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @import url("http://swift.org/assets/stylesheets/application.css");
+
+article {
+    .good pre:before { 
+       content: "✅"; 
+       float: right; 
+     }
+    .bad pre:before { 
+       content: "⛔️"; 
+       float: right; 
+     }
+}
