Get rid of horizontal scrollbar on mobile browsers

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ article {
      visibility: hidden;
      cursor: pointer;
      height: 0;
-     width: 100em;
+     width: 100%;
      margin-bottom: 2em;
      display: block;
      font-size: inherit;
