--- a/css/main.scss
+++ b/css/main.scss
@@ -2,22 +2,18 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @import url("http://swift.org/assets/stylesheets/application.css");
-// The following should be moved to the Swift.org stylesheet
-article { 
-    pre.good {
-        background: #E6FFE5;
-        border-color: #C0FFBC;
+// The following has been moved to the Swift.org stylesheet
+td {
+    & > code {
+        color: #000;
+        padding: 3px 8px;
+        font-size: 14px;
+        white-space: nowrap;
+        border: 1px solid #E5E5E5;
+        background-color: rgba(127, 127, 127, 1.0) !important;
     }
-    pre.good:before {
-        content: "✅";
-        float: right;
-    }
-    pre.bad {
-        background: #F9E2E4;
-        border-color: #F6B7BE;
-    }
-    pre.bad:before {
-        content: "⛔️";
-        float: right;
-    }
+}
+
+article table td code {
+    background-color: #f7f7f7 !important;
 }
