--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
   <header>
-    <h1>{{ page.title }}</h1>
+    <h1>{{ page.title | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
   </header>
   {{ content }}
 </article>
